Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntegerInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(integer var)
        if var = 5
            output "passed"
        end
    end
end
