Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(integer var)
    end
end
